@@ -20,7 +20,8 @@
 """Filter for QtWebEngine cookies."""
 
 from qutebrowser.config import config
-from qutebrowser.utils import utils, qtutils
+from qutebrowser.utils import utils, qtutils, log
+from qutebrowser.misc import objects
 
 
 @utils.prevent_exceptions(False)  # Runs in I/O thread
@@ -30,17 +31,29 @@ def _accept_cookie(request):
     if not url.isValid():
         url = None
 
+    if qtutils.version_check('5.11.3', compiled=False):
+        third_party = request.thirdParty
+    else:
+        # WORKAROUND for https://bugreports.qt.io/browse/QTBUG-71393
+        third_party = (request.thirdParty and
+                       not request.firstPartyUrl.isEmpty())
+
     accept = config.instance.get('content.cookies.accept',
                                  url=url)
+
+    if 'log-cookies' in objects.debug_flags:
+        first_party_str = ("<unknown>" if not request.firstPartyUrl.isValid()
+                           else request.firstPartyUrl.toDisplayString())
+        origin_str = ("<unknown>" if not request.origin.isValid()
+                      else request.origin.toDisplayString()
+        log.network.debug('Cookie from origin {} on {} (third party: {}) '
+                          '-> applying setting {}'
+                          .format(origin_str, first_party_str, third_party,
+                                  accept))
+
     if accept == 'all':
         return True
     elif accept in ['no-3rdparty', 'no-unknown-3rdparty']:
-        if qtutils.version_check('5.11.3', compiled=False):
-            third_party = request.thirdParty
-        else:
-            # WORKAROUND for https://bugreports.qt.io/browse/QTBUG-71393
-            third_party = (request.thirdParty and
-                           not request.firstPartyUrl.isEmpty())
         return not third_party
     elif accept == 'never':
         return False
