@@ -25,8 +25,8 @@ from PyQt5.QtNetwork import QNetworkCookie, QNetworkCookieJar
 from PyQt5.QtCore import pyqtSignal, QDateTime
 
 from qutebrowser.config import config
-from qutebrowser.utils import utils, standarddir, objreg
-from qutebrowser.misc import lineparser
+from qutebrowser.utils import utils, standarddir, objreg, log
+from qutebrowser.misc import lineparser, objects
 
 
 cookie_jar = None
@@ -56,7 +56,13 @@ class RAMCookieJar(QNetworkCookieJar):
         Return:
             True if one or more cookies are set for 'url', otherwise False.
         """
-        if config.instance.get('content.cookies.accept', url=url) == 'never':
+        accept = config.instance.get('content.cookies.accept', url=url)
+
+        if 'log-cookies' in objects.debug_flags:
+            log.network.debug('Cookie on {} -> applying setting {}'
+                              .format(url.toDisplayString(), accept))
+
+        if accept == 'never':
             return False
         else:
             self.changed.emit()
